--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,4 +2,11 @@ spring:
   application:
     name: spring-boot-testing
   jpa:
+    database: MYSQL
     show-sql: true
+    hibernate:
+      ddl-auto: update
+  datasource:
+    url: jdbc:mysql://localhost:3306/spring_boot_testing_db?useSSL=false&allowPublicKeyRetrieval=true
+    username: root
+    password: root
